srv/ensino/phaser3/Deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: phaser3
  name: phaser3
  namespace: ensino
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: phaser3
    spec:
      containers:
        - image: docker.io/boidacarapreta/phaser3
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            timeoutSeconds: 1
          name: phaser3
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 1
              memory: 1Gi
            requests:
              cpu: 256m
              memory: 512
