srv/ensino/phaser3/Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: phaser3
  name: phaser3
  namespace: ensino
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: phaser3
